test_cflags = [
  '-I'+meson.source_root()+'/src',
]

demo = executable('demo',
  'demo.c',
  c_args : test_cflags,
  link_args : ['-lm'],
  dependencies: [
    libyplot_dep
  ],
)

demo2 = executable('demo2',
  'demo2.c',
  c_args : test_cflags,
  link_args : ['-lm'],
  dependencies: [
    libyplot_dep
  ],
)

demo3 = executable('demo3',
  'demo3.c',
  c_args : test_cflags,
  link_args : ['-lm'],
  dependencies: [
    libyplot_dep
  ],
)

stringtest = executable('stringtest',
  'stringtest.c',
  c_args : test_cflags,
  link_args : ['-lm'],
  dependencies: [
    libyplot_dep
  ],
)

testdata = executable('testdata',
  'testdata.c',
  c_args : test_cflags,
  link_args : ['-lm'],
  dependencies: [
    libyplot_dep
  ],
)

meson.source_root()+'/src'
